--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+     <link rel="stylesheet" href="style.css">
+    </head>
     <header>
         <h1>Cats</h1>
         <h2>Кіт,як наймиліше </h2>
